<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:cirbtn="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MyActivity"
    android:background="#ffbebebe"
    android:id="@+id/relative_layout">

    <weixiaokang.caculator.component.AboveView
        android:id="@+id/result_view"
        style="@style/TVTheme"/>
    <weixiaokang.caculator.component.BelowView
        android:id="@+id/edit_view"
        android:layout_below="@id/result_view"
        android:hint="@string/hint"
        style="@style/TVTheme"/>
        <TableLayout
            android:stretchColumns="*"
            android:id="@+id/table_layout"
            android:layout_below="@id/edit_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/background_light">
            <TableRow
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_width="wrap_content">
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/c_button"
                    android:text="@string/c"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/del_button"
                    android:text="@string/del"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/div_button"
                    android:text="@string/div"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/mul_button"
                    android:text="@string/mul"
                    style="@style/BtnTheme"/>
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp">
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/nine"
                    android:text="@string/nine"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/eight"
                    android:text="@string/eight"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/seven"
                    android:text="@string/seven"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/minus"
                    android:text="@string/minus"
                    style="@style/BtnTheme"/>
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_height="0dp"
                android:layout_width="wrap_content">
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/six"
                    android:text="@string/six"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/five"
                    android:text="@string/five"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/four"
                    android:text="@string/four"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/plus"
                    android:text="@string/plus"
                    style="@style/BtnTheme"/>
            </TableRow>
            <TableRow
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="0dp">
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/three"
                    android:text="@string/three"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/two"
                    android:text="@string/two"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/one"
                    android:text="@string/one"
                    style="@style/BtnTheme"/>
                <weixiaokang.caculator.component.CircleButton
                    android:id="@+id/equ"
                    android:text="@string/equ"
                    style="@style/BtnTheme"/>
            </TableRow>
           <TableRow
               android:layout_weight="1"
               android:layout_height="0dp"
               android:layout_width="match_parent">

               <weixiaokang.caculator.component.CircleButton
                   android:id="@+id/zero"
                   android:text="@string/zero"
                   style="@style/BtnTheme"/>
               <weixiaokang.caculator.component.CircleButton
                   android:id="@+id/dot"
                   android:text="@string/dot"
                   style="@style/BtnTheme"/>
               </TableRow>

        </TableLayout>
</RelativeLayout>
